--- a/.editorconfig
+++ b/.editorconfig
@@ -17,5 +17,9 @@ insert_final_newline = true
 indent_style = tab
 indent_size = 4
 
+[Makefile]
+indent_style = tab
+indent_size = 4
+
 [*.md]
 trim_trailing_whitespace = false
